--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,4 +6,5 @@ $primary-font: 'Roboto', sans-serif;
 $secondary-font: 'Courier New', Courier, monospace;
 
 $media-desktop: 1366px;
+$media-tablet: 768px;
 $media-mobile: 480px;
