--- a/src/components/Admin/admin.scss
+++ b/src/components/Admin/admin.scss
@@ -2,8 +2,43 @@
 
 .admin {
     @include base;
-
     .one-hold {
         @include list-item
+    }
+}
+
+@media (max-width: $media-tablet){
+    .admin{
+        .all-holds{
+            .one-hold {
+                h1 {
+                    font-size: 16px;
+                }
+                h2 {
+                    font-size: 13px;
+                }
+                h3 {
+                    font-size: 11px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: $media-mobile){
+    .admin{
+        .all-holds{
+            .one-hold {
+                h1 {
+                    font-size: 12px;
+                }
+                h2 {
+                    font-size: 10px;
+                }
+                h3 {
+                    font-size: 8px;
+                }
+            }
+        }
     }
 }
