--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -17,3 +17,28 @@
         }
     }
 }
+
+@media (max-width: $media-tablet){
+
+    .login {
+        h1 {
+            font-size: 16px;
+        }
+        .link {
+            font-size: 16px;
+        }
+    }
+    
+}
+
+@media (max-width: $media-mobile){
+
+    .login {
+        h1 {
+            font-size: 12px;
+        }
+        .link {
+            font-size: 12px;
+        }
+    }
+}
