--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -2,20 +2,36 @@
 
 .nav {
     width: 100vw;
-    height: 10vh;
+    height: 8vh;
     background-color: rgb(32,64,105);
     font-family: $primary-font;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    
+    .link {
+        text-decoration: none;
+        color: $tertiary-color;
+        font-size: 24px;
+    
+        &:hover{
+            color: $list-color;
+        }
+    }
 }
 
-.link {
-    text-decoration: none;
-    color: $tertiary-color;
-    font-size: 24px;
+@media (max-width: $media-tablet){
+    .nav{
+        .link{
+            font-size: 16px;
+        }
+    }
+}
 
-    &:hover{
-        color: $list-color;
+@media (max-width: $media-mobile){
+    .nav{
+        .link{
+            font-size: 12px;
+        }
     }
 }
