S3 working and adjustments to scss made

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $base-color: rgb(47,53,60);
 $list-color: rgb(7, 224, 54);
-$tertiary-color: white;
+$tertiary-color: rgb(230, 230, 230);
 
 $primary-font: 'Roboto', sans-serif;
 $secondary-font: 'Courier New', Courier, monospace;
