--- a/src/components/Account/account.scss
+++ b/src/components/Account/account.scss
@@ -14,22 +14,16 @@
         display: flex;
         
         .profile-info {
-            height: 80%;
+            height: 100%;
             width: 25%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            position: relative;
             text-align: center;
         
             button {
                 @include button;
-                display: flex;
-                height: 10%;
                 position: absolute;
-                bottom: 0;
-                line-height: 40px;
             }
 
             .pic-box{
@@ -37,38 +31,51 @@
                 width: 90%;
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
                 align-items: center;
+                justify-content: space-around;
                 position: relative;
 
                 .profile-picture {
                     height: 50%;
                     width: 70%;
-                    margin: 20px;
+                    margin: 10px;
                     position: absolute;
-                    top: 10px;
+                    top: 10px
                 }
 
-                .drop-zone{
-                    height: 17%;
-                    width: 80%;
-                    display: flex;
-                    position: absolute;
-                    bottom: 20%;
-                    background-color: rebeccapurple;
-                }
-                .cancel-button{
-                    width: 15%;
-                }
                 .update-button{
+                    height: 10%;
                     width: 45%;
+                    bottom: 30%;
+                }
+
+                .update-box {
+                    height: 60%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: space-around;
+                    position: absolute;
+                    bottom: 0;
+                    
+                    .drop-zone{
+                        height: 30%;
+                        width: 85%;
+                        background-color: rebeccapurple;
+                    }
+                    .cancel-button{
+                        height: 10%;
+                        width: 35%;
+                        bottom: 10%;
+                    }
                 }
             }
         }
     
         .user-holds{
             height: fit-content;
-            width: 50%;
+            width: 55%;
             display: flex;
             flex-direction: column;
             .user-hold {
@@ -102,14 +109,25 @@
 
         .account-info{
             .profile-info {
-                .profile-picture{
-                    height: 20%;
-                }
-            }
-            .buttons {
-                button {
-                    font-size: 9px;
-                    height: 100%;
+                .pic-box{
+                    .profile-picture{
+                        height: 25%;
+                    }
+
+                    .update-box{
+                        bottom: 30%;
+                        .drop-zone{
+                            height: 20%;
+                        }
+                        .cancel-button{
+                            width: 40%;
+                            bottom: 25%;
+                        }
+                    }
+
+                    .update-button{
+                        bottom: 55%;
+                    }
                 }
             }
         }
@@ -135,13 +153,24 @@
         
         .account-info{
             .profile-info {
-                .profile-picture{
-                    height: 15%;
-                }
-            }
-            .buttons {
-                button {
-                    font-size: 7px;
+                .pic-box{
+                    .profile-picture{
+                        height: 20%;
+                        width: 80%;
+                    }
+                    .update-box{
+                        bottom: 40%;
+                        .drop-zone{
+                            height: 12%;
+                        }
+                        .cancel-button{
+                            bottom: 30%;
+                        }
+                    }
+
+                    .update-button{
+                        width: 50%;
+                    }
                 }
             }
         }
