--- a/src/components/Admin/admin.scss
+++ b/src/components/Admin/admin.scss
@@ -2,14 +2,19 @@
 
 .admin {
     @include base;
-    height: fit-content;
+    height: 200vh;
 
     .all-holds{
-        height: fit-content;
-        width: 65%;
+        max-height: fit-content;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
         .one-hold {
             @include list-item;
-            width: 80%;
+            justify-content: space-between;
+            height: 35vh;
+            width: 50%;
         }
     }
 }
@@ -19,13 +24,13 @@
         .all-holds{
             .one-hold {
                 h1 {
-                    font-size: 16px;
+                    font-size: 14px;
                 }
                 h2 {
-                    font-size: 13px;
+                    font-size: 12px;
                 }
                 h3 {
-                    font-size: 11px;
+                    font-size: 10px;
                 }
             }
         }
@@ -37,10 +42,10 @@
         .all-holds{
             .one-hold {
                 h1 {
-                    font-size: 12px;
+                    font-size: 10px;
                 }
                 h2 {
-                    font-size: 10px;
+                    font-size: 9px;
                 }
                 h3 {
                     font-size: 8px;
