--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -11,6 +11,7 @@
 
         .link {
             color: $tertiary-color;
+            text-decoration: none;
             &:hover {
                 color: $list-color;
             }
