--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,8 @@
-$base-color: rgb(47,53,60);
+$base-color: rgb(141, 186, 238);
+$button-color: rgb(117, 154, 184);
 $list-color: rgb(7, 224, 54);
 $tertiary-color: rgb(230, 230, 230);
+$delete-color:  rgb(151, 0, 0);
 
 $primary-font: 'Roboto', sans-serif;
 $secondary-font: 'Courier New', Courier, monospace;
