--- a/src/components/Account/account.scss
+++ b/src/components/Account/account.scss
@@ -25,7 +25,7 @@
         
             button {
                 @include button;
-                height: 6%;
+                height: 8%;
                 position: relative;
             }
 
@@ -44,10 +44,11 @@
                     margin: 10px;
                     position: absolute;
                     top: 5%;
+                    border-radius: 15%;
                 }
 
                 .update-button{
-                    width: 45%;
+                    width: 55%;
                     bottom: 3%;
                 }
 
@@ -60,13 +61,17 @@
                     position: relative;
                     top: 14%;
                     
-                    
                     .drop-zone{
                         height: 18%;
                         width: 85%;
-                        background-color: rebeccapurple;
+                        background-color: rgb(149, 88, 209);
                         margin: 20px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 15%;
                     }
+
                     .cancel-button{
                         width: 35%;
                     }
@@ -125,7 +130,7 @@
                             height: 11%;
                         }
                         .cancel-button{
-                            width: 40%;
+                            width: 50%;
                         }
                     }
 
@@ -147,8 +152,6 @@
 @media (max-width: $media-mobile){
     .account{
         button {
-            font-size: 7px;
-            height: 5%;
             width: 60%;
         }
         h1 {
@@ -172,13 +175,16 @@
                         position: absolute;
                         top: 20%;
                         .drop-zone{
-                            height: 12%;
+                            height: 15%;
+                        }
+                        .cancel-button{
+                            width: 60%;
                         }
                     }
 
                     .update-button{
-                        bottom: 25%;
-                        width: 50%;
+                        bottom: 24%;
+                        width: 70%;
                     }
                 }
             }
@@ -186,6 +192,7 @@
             .user-holds{
                 .user-hold {
                     height: 15vh;
+                    width: 110%;
                 }
             }
         }
