--- a/src/components/Catalog/catalog.scss
+++ b/src/components/Catalog/catalog.scss
@@ -22,7 +22,9 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: aqua;
+            background-color: rgb(252, 252, 152);
+            border-radius: 15%;
+            margin-top: 2%;
             input {
                 margin: 10px;
                 height: 50%;
