--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,6 @@ $delete-color:  rgb(151, 0, 0);
 $primary-font: 'Roboto', sans-serif;
 $secondary-font: 'Courier New', Courier, monospace;
 
-$media-desktop: 1366px;
+$media-laptop: 1280px;
 $media-tablet: 768px;
 $media-mobile: 480px;
