--- a/src/components/Catalog/catalog.scss
+++ b/src/components/Catalog/catalog.scss
@@ -13,11 +13,16 @@
         .add-book-buttons {
             @include button;
             margin: 30px;
-            width: 12%;
+            color: black;
+            font-size: 24px;
+        }
+
+        #add-book-button {
+            color: $tertiary-color;
         }
 
         form {
-            width: 80%;
+            width: 70%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -41,7 +46,8 @@
         align-items: center;
         .book {
             @include list-item;
-            width: 60%;
+            height: 35vh;
+            width: 50%;
             .buttons {
                 button {
                     margin: 16px;
