--- a/src/components/Catalog/catalog.scss
+++ b/src/components/Catalog/catalog.scss
@@ -2,7 +2,6 @@
 
 .catalog {
     @include base;
-    height: fit-content;
     
     .add-book-box {
         width: 100%;
@@ -22,7 +21,7 @@
         }
 
         form {
-            width: 70%;
+            width: 50%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -46,24 +45,41 @@
         align-items: center;
         .book {
             @include list-item;
-            height: 35vh;
-            width: 50%;
+            width: 40%;
             .buttons {
                 button {
                     margin: 16px;
+                }
+                .are-you-sure-box{
+                    @include are-you-sure-box
                 }
             }
         }
     }
 }
 
+@media (max-width: $media-laptop){
+    .catalog{
+        .book-list{
+            .book{
+                width: 80%
+            }
+        }
+    }
+}
+
 @media (max-width: $media-tablet){
+    p{
+        font-size: 11px;
+    }
     .catalog{
         .add-book-buttons {
             font-size: 9px;
         }
         .book-list{
             .book {
+                height: 25vh;
+                width: 80%;
                 h1 {
                     font-size: 16px;
                 }
@@ -84,6 +100,9 @@
 }
 
 @media (max-width: $media-mobile){
+    p{
+        font-size: 8px;
+    }
     .catalog{
         .add-book-box{
             .add-book-buttons{
@@ -92,6 +111,7 @@
         }
         .book-list{
             .book {
+                height: 15vh;
                 h1 {
                     font-size: 12px;
                 }
@@ -105,6 +125,11 @@
                     button {
                         font-size: 7px;
                     }
+                    .are-you-sure-box{
+                    button{
+                        margin: 2px;
+                    }
+                }
                 }
             }
         }
