--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,9 @@
 $base-color: rgb(141, 186, 238);
-$button-color: rgb(117, 154, 184);
 $list-color: rgb(7, 224, 54);
 $tertiary-color: rgb(230, 230, 230);
+$button-color: rgb(117, 154, 184);
 $delete-color:  rgb(151, 0, 0);
+$nav-color: rgb(32,64,105);
 
 $primary-font: 'Roboto', sans-serif;
 $secondary-font: 'Courier New', Courier, monospace;
