--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -24,6 +24,14 @@
     }
 }
 
+@media (max-width: $media-laptop){
+    .nav{
+        .link{
+            font-size: 20px;
+        }
+    }
+}
+
 @media (max-width: $media-tablet){
     .nav{
         .link{
