--- a/src/components/Register/register.scss
+++ b/src/components/Register/register.scss
@@ -18,11 +18,12 @@
         form {
             width: 60%;
             h3 {
-                font-size: 11px;
+                font-size: 16px;
             }
 
             button {
                 width: 70px;
+                font-size: 16px;
             }
         }
     }
@@ -33,9 +34,8 @@
 
     .register {
         form {
-            h3 {
-                font-size: 8px;
-            }
+            width: 70%;
+
             
             button {
                 width: 80px;
