--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -55,10 +55,11 @@
 
   .info {
       height: 100%;
-      width: 30%;
+      width: 35%;
       display: flex;
       flex-direction: column;
       justify-content: space-around;
+      align-items: flex-start;
       h2 {
           margin: 5px;
       }
