--- a/src/components/Admin/admin.scss
+++ b/src/components/Admin/admin.scss
@@ -66,6 +66,7 @@
             }
             .one-hold {
                 height: 15vh;
+                width: 70%;
                 h1 {
                     font-size: 10px;
                 }
