--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -9,3 +9,25 @@
     font-family: $primary-font;
     color: rgb(242, 242, 242);
 }
+
+@media (max-width: $media-tablet){
+    .home{
+        h1 {
+            font-size: 24px;
+        }
+        h2 {
+            font-size: 18px;
+        }
+    }
+}
+
+@media (max-width: $media-mobile){
+    .home{
+        h1 {
+            font-size: 18px;
+        }
+        h2 {
+            font-size: 15px;
+        }
+    }
+}
