--- a/src/components/UserList/userList.scss
+++ b/src/components/UserList/userList.scss
@@ -67,6 +67,7 @@
         .list{
             .user {
                 height: 14vh;
+                margin: 10px;
                 h3 {
                     font-size: 8px;
                 }
