--- a/src/components/Account/account.scss
+++ b/src/components/Account/account.scss
@@ -214,6 +214,7 @@
                 .user-hold {
                     height: 13vh;
                     width: 100%;
+                    margin: 10px;
                     .buttons{
                         button{
                             font-size: 8px;
