--- a/src/components/Admin/admin.scss
+++ b/src/components/Admin/admin.scss
@@ -67,6 +67,7 @@
             .one-hold {
                 height: 15vh;
                 width: 70%;
+                margin: 10px;
                 h1 {
                     font-size: 10px;
                 }
