--- a/src/components/Catalog/catalog.scss
+++ b/src/components/Catalog/catalog.scss
@@ -21,7 +21,7 @@
         }
 
         form {
-            width: 40%;
+            width: 50%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -121,6 +121,7 @@
             .book {
                 height: 15vh;
                 width: 75%;
+                margin: 10px;
                 h1 {
                     font-size: 12px;
                 }
