--- a/src/components/Catalog/catalog.scss
+++ b/src/components/Catalog/catalog.scss
@@ -36,6 +36,30 @@
             }
         }
     }
+
+    .search-box{
+        width: 30vw;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 20px;
+
+        .search-btn {
+            color: white;
+            text-decoration: none;
+            height: 25px;
+            width: 8vw;
+            background-color: #1e272c86;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer
+        }
+        
+        .search-btn:hover {
+            background-color: #586F7CD0;
+            transition: .5s;
+        }
+    }
+    
     .book-list {
         height: fit-content;
         width: 100vw;
